force-app/core/main/default/objects/Demo_Persona__c/Demo_Persona__c.object-meta.xml
<CustomObject>
    <label>Unified Profile</label>
    <nameField>
        <label>Persona Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Unified Profile Builder</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>