force-app/core/main/default/objects/Demo_Persona__c/fields/Avatar_URL__c.field-meta.xml
<CustomField>
    <fullName>Avatar_URL__c</fullName>
    <label>Avatar URL</label>
    <length>255</length>
    <type>Text</type>
</CustomField>