force-app/core/main/default/objects/Demo_Persona__c/fields/Badge_Text__c.field-meta.xml
<CustomField>
    <fullName>Badge_Text__c</fullName>
    <label>Badge Text</label>
    <length>64</length>
    <type>Text</type>
</CustomField>