force-app/core/main/default/objects/Demo_Persona__c/fields/Brand__c.field-meta.xml
<CustomField>
    <fullName>Brand__c</fullName>
    <label>Customer Name</label>
    <description>The customer this demo persona represents (e.g. Cumulus Bank).</description>
    <length>128</length>
    <type>Text</type>
</CustomField>