force-app/core/main/default/objects/Demo_Persona__c/fields/Click_Likelihood__c.field-meta.xml
<CustomField>
    <fullName>Click_Likelihood__c</fullName>
    <label>Click Likelihood</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>