force-app/core/main/default/objects/Demo_Persona__c/fields/Company__c.field-meta.xml
<CustomField>
    <fullName>Company__c</fullName>
    <label>Company</label>
    <length>128</length>
    <type>Text</type>
</CustomField>