force-app/core/main/default/objects/Demo_Persona__c/fields/Component_Recipe__c.field-meta.xml
<CustomField>
    <fullName>Component_Recipe__c</fullName>
    <label>Component Recipe</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>