force-app/core/main/default/objects/Demo_Persona__c/fields/Customer_ID__c.field-meta.xml
<CustomField>
    <fullName>Customer_ID__c</fullName>
    <label>Customer ID</label>
    <length>64</length>
    <type>Text</type>
</CustomField>