force-app/core/main/default/objects/Demo_Persona__c/fields/Engagement_Label__c.field-meta.xml
<CustomField>
    <fullName>Engagement_Label__c</fullName>
    <label>Engagement Label</label>
    <length>64</length>
    <type>Text</type>
</CustomField>