force-app/core/main/default/objects/Demo_Persona__c/fields/Engagement_Score__c.field-meta.xml
<CustomField>
    <fullName>Engagement_Score__c</fullName>
    <label>Engagement Score</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>