force-app/core/main/default/objects/Demo_Persona__c/fields/Intent_Summary__c.field-meta.xml
<CustomField>
    <fullName>Intent_Summary__c</fullName>
    <label>Intent Summary</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>