force-app/core/main/default/objects/Demo_Persona__c/fields/Key_Context__c.field-meta.xml
<CustomField>
    <fullName>Key_Context__c</fullName>
    <label>Key Context</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>