force-app/core/main/default/objects/Demo_Persona__c/fields/Lifecycle_Stage__c.field-meta.xml
<CustomField>
    <fullName>Lifecycle_Stage__c</fullName>
    <label>Lifecycle Stage</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value><fullName>Prospect</fullName><default>false</default><label>Prospect</label></value>
            <value><fullName>Nurturing Lead</fullName><default>false</default><label>Nurturing Lead</label></value>
            <value><fullName>Engaged NDR</fullName><default>false</default><label>Engaged NDR</label></value>
            <value><fullName>Active Customer</fullName><default>false</default><label>Active Customer</label></value>
            <value><fullName>Cross-Sell Target</fullName><default>false</default><label>Cross-Sell Target</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>