force-app/core/main/default/objects/Demo_Persona__c/fields/Open_Likelihood__c.field-meta.xml
<CustomField>
    <fullName>Open_Likelihood__c</fullName>
    <label>Open Likelihood</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>