force-app/core/main/default/objects/Demo_Persona__c/fields/Primary_Address__c.field-meta.xml
<CustomField>
    <fullName>Primary_Address__c</fullName>
    <label>Primary Address</label>
    <length>255</length>
    <type>Text</type>
</CustomField>