force-app/core/main/default/objects/Demo_Persona__c/fields/Primary_Phone__c.field-meta.xml
<CustomField>
    <fullName>Primary_Phone__c</fullName>
    <label>Primary Phone</label>
    <type>Phone</type>
</CustomField>