force-app/core/main/default/objects/Demo_Persona__c/fields/Propensity__c.field-meta.xml
<CustomField>
    <fullName>Propensity__c</fullName>
    <label>Propensity to Transact</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>Low</fullName><default>false</default><label>Low</label></value>
            <value><fullName>Medium</fullName><default>false</default><label>Medium</label></value>
            <value><fullName>High</fullName><default>false</default><label>High</label></value>
            <value><fullName>Very High</fullName><default>false</default><label>Very High</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>