force-app/core/main/default/objects/Demo_Persona__c/fields/Risk_Tier__c.field-meta.xml
<CustomField>
    <fullName>Risk_Tier__c</fullName>
    <label>Risk Tier</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>Low</fullName><default>false</default><label>Low</label></value>
            <value><fullName>Medium</fullName><default>false</default><label>Medium</label></value>
            <value><fullName>High</fullName><default>false</default><label>High</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>