force-app/core/main/default/objects/Demo_Persona__c/fields/Segment__c.field-meta.xml
<CustomField>
    <fullName>Segment__c</fullName>
    <label>Segment</label>
    <length>128</length>
    <type>Text</type>
</CustomField>