force-app/core/main/default/objects/Demo_Persona__c/fields/Suggested_Opener__c.field-meta.xml
<CustomField>
    <fullName>Suggested_Opener__c</fullName>
    <label>Suggested Opener</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>