force-app/core/main/default/objects/Demo_Persona__c/fields/Theme__c.field-meta.xml
<CustomField>
    <fullName>Theme__c</fullName>
    <label>Theme</label>
    <referenceTo>Demo_Theme__c</referenceTo>
    <relationshipLabel>Personas</relationshipLabel>
    <relationshipName>Personas</relationshipName>
    <type>Lookup</type>
    <deleteConstraint>SetNull</deleteConstraint>
</CustomField>