force-app/core/main/default/objects/Demo_Persona__c/fields/Unsubscribe_Risk__c.field-meta.xml
<CustomField>
    <fullName>Unsubscribe_Risk__c</fullName>
    <label>Unsubscribe Risk</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>