force-app/core/main/default/objects/Demo_Persona__c/listViews/All_Personas.listView-meta.xml
<ListView>
    <fullName>All_Personas</fullName>
    <columns>NAME</columns>
    <columns>Brand__c</columns>
    <columns>Title__c</columns>
    <columns>Company__c</columns>
    <columns>Segment__c</columns>
    <columns>Engagement_Score__c</columns>
    <columns>Theme__c</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <label>All Personas</label>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>