force-app/core/main/default/objects/Demo_Persona__c/listViews/My_Personas.listView-meta.xml
<ListView>
    <fullName>My_Personas</fullName>
    <columns>NAME</columns>
    <columns>Brand__c</columns>
    <columns>Title__c</columns>
    <columns>Company__c</columns>
    <columns>Segment__c</columns>
    <columns>Theme__c</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Mine</filterScope>
    <label>My Personas</label>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>